src/snapshots/prql__parser__test__parse_s_string.snap
---
source: src/parser.rs
assertion_line: 351
expression: "parse_tree_of_str(r#\"s\"SUM({col})\"\"#, Rule::s_string)?"
---
[
    Pair {
        rule: s_string,
        span: Span {
            str: "s\"SUM({col})\"",
            start: 0,
            end: 13,
        },
        inner: [
            Pair {
                rule: s_string_string,
                span: Span {
                    str: "SUM(",
                    start: 2,
                    end: 6,
                },
                inner: [],
            },
            Pair {
                rule: expr,
                span: Span {
                    str: "col",
                    start: 7,
                    end: 10,
                },
                inner: [
                    Pair {
                        rule: terms,
                        span: Span {
                            str: "col",
                            start: 7,
                            end: 10,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "col",
                                    start: 7,
                                    end: 10,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: s_string_string,
                span: Span {
                    str: ")",
                    start: 11,
                    end: 12,
                },
                inner: [],
            },
        ],
    },
]
